name:                packrank
version:             0.1.0.0
synopsis:            Package ranking
description:         A library and program for ranking packages by how
                     widely they are used.
homepage:            https://github.com/bos/packrank
license:             BSD3
license-file:        LICENSE
author:              Bryan O'Sullivan
maintainer:          bos@serpentine.com
copyright:           2014 Bryan O'Sullivan
category:            Development
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:
  README.md

library
  default-language: Haskell2010
  hs-source-dirs:   lib
  ghc-options:      -O2 -Wall -fwarn-tabs
  exposed-modules:
    Distribution.PackRank
    Distribution.PackDeps.Lens
  other-modules:
    Distribution.PackDeps.Lens.Machinery
  build-depends:
    Cabal,
    base >=4.3 && <5,
    binary,
    containers,
    lens >= 0.4.5,
    packdeps >= 0.4.0.2,
    template-haskell,
    vector,
    vector-binary-instances

executable packrank
  default-language: Haskell2010
  ghc-options:      -O2 -Wall -fwarn-tabs
  hs-source-dirs:   exe
  main-is:          PackRank.hs
  build-depends:
    base >=4.3 && <5,
    binary,
    containers,
    directory,
    filepath,
    packdeps,
    packrank,
    vector,
    vector-algorithms >= 0.5

source-repository head
  type:     git
  location: https://github.com/bos/packrank

source-repository head
  type:     mercurial
  location: https://bitbucket.org/bos/packrank
